src/objects/Declaration__c.object
<CustomObject><fields>
        <fullName>Asian_race__c</fullName>
        <label>Asian_race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asian Indian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other Asian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Bankruptcy_Reason__c</fullName>
        <label>Bankruptcy Reason</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Bankruptcy__c</fullName>
        <label>Bankruptcy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>CashtoClose_Borrowed_Money__c</fullName>
        <label>CashtoClose Borrowed Money</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>CashtoClose__c</fullName>
        <label>CashtoClose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>DeclarationClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Declarations</relationshipLabel>
        <relationshipName>Declarations</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>DeclarationLoan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Loan</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>Declarations</relationshipLabel>
        <relationshipName>Declarations</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Declaration_Reason__c</fullName>
        <label>Declaration Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Declaration_Remarks__c</fullName>
        <label>Declaration Remarks</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Delinquent_Address__c</fullName>
        <label>Delinquent Address</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Delinquent_Date_of_the_Debt__c</fullName>
        <label>Delinquent Date  of the Debt</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Delinquent_FHA_VA_Case__c</fullName>
        <label>Delinquent FHA VA Case</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Delinquent_Name__c</fullName>
        <label>Delinquent Name</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Delinquent_Reason__c</fullName>
        <label>Delinquent Reason</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Delinquent__c</fullName>
        <label>Delinquent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Endorser__c</fullName>
        <label>Endorser</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Enrolled_tribe__c</fullName>
        <label>Enrolled_tribe</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Ethnicity_New__c</fullName>
        <label>Sub-Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mexican</fullName>
                </value>
                <value>
                    <fullName>Puerto Rican</fullName>
                </value>
                <value>
                    <fullName>Cuban</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Do Not Disclose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Do Not Disclose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>FHA_Acc_No__c</fullName>
        <label>FHA Acc No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>FHA_Amount__c</fullName>
        <label>FHA Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>FHA_Creditor__c</fullName>
        <label>FHA Creditor</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>FHA_Insured_Loan__c</fullName>
        <label>FHA Insured Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>FHA_Property_Address__c</fullName>
        <label>FHA Property Address</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>FHA_Unpaid_Loan__c</fullName>
        <label>FHA Unpaid Loan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>IsDeclaration_Filled_From_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Declaration Filled From Tab</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Lawsuit__c</fullName>
        <label>Lawsuit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Outstanding_Judgments__c</fullName>
        <description>Are there any outstanding judgements against you?</description>
        <label>Outstanding Judgments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Permanent_Resident__c</fullName>
        <label>Permanent Resident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Primary_Residence__c</fullName>
        <label>Primary Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Do Not Disclose</fullName>
                </value>
                <value>
                    <fullName>Asian Indian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other Asian</fullName>
                </value>
                <value>
                    <fullName>Guamanian or Chamorro</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian</fullName>
                </value>
                <value>
                    <fullName>Samoan</fullName>
                </value>
                <value>
                    <fullName>Other Pacific Islander</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ReverseMortgage_Cost__c</fullName>
        <label>ReverseMortgage Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ReverseMortgage__c</fullName>
        <label>ReverseMortgage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ReverseMortgage_finproduct__c</fullName>
        <label>ReverseMortgage Finproduct</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Sex_New__c</fullName>
        <label>Sex_New</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Client did not provide this information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Do Not Disclose</fullName>
                </value>
                <value>
                    <fullName>Male and Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Sub_Ethnicity__c</fullName>
        <label>Sub_Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mexican</fullName>
                </value>
                <value>
                    <fullName>Puerto Rican</fullName>
                </value>
                <value>
                    <fullName>Cuban</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>US_Citizen__c</fullName>
        <label>US Citizen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Declaration</label><nameField>
        <label>Declaration Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Declarations</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DeclarationClient__c</columns>
        <columns>DeclarationLoan__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsDeclaration_Filled_From_Tab__c</columns>
        <columns>US_Citizen__c</columns>
        <columns>Ethnicity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Declarations</label>
    </listViews><sharingReasons>
        <fullName>LoanProcessor__c</fullName>
        <label>LoanProcessor</label>
    </sharingReasons><sharingReasons>
        <fullName>Loan_Officer__c</fullName>
        <label>Loan Officer</label>
    </sharingReasons><sharingReasons>
        <fullName>Origination_Loan_Officer__c</fullName>
        <label>Origination Loan Officer</label>
    </sharingReasons></CustomObject>